2020-06-03  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #91250: Add php configuration file for Extbase persistence mapping
	* Resolves #90274: Add support for PHP 7.4
	* Resolves #91251: Add Symfony dependency injection configuration

2020-01-05  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #88867: Raise PHP dependency to < 7.4

2019-10-17  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #88683: Updater uses default columns in TYPO3 9
	* Resolves #88780: Undefined variable usage in the DatabaseUpdateUtility.php
	* Resolves #89443: Update subdivisions of Italy
	* Update version to 6.7.5

2019-05-28  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #82132: Composer install fails with additional languages required at the same time

2019-05-21  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #87983: The name of capital of Ukraine should be 'Kyiv'
	* Resolves #87943: Change Country Name Macedonia to North Macedonia
	* Resolves #87877: LocalizationUtility missing import for TYPO3\CMS\Core\Site\Entity\SiteLanguage in TYPO3 9 LTS

2019-01-04  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #87243: Constant editor fails with class not found exception
	* Resolves #87329: Fix non-UTF-8 character in ext_emconf
	* Resolves #87330: Fix wrong array access to $emConf['version']
	* Update version to 6.7.4

2018-12-19  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #86991: Language pack generation fails with fatal error
	* Resolves #87225: Add Kosovo user-defined country code

2018-10-25  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #86710: Crash in PHP 7.0 due to nullable return type
	* Resolves #86723: Autoformat the code
	* Update version to 6.7.2

2018-10-20  Stanislas Rolland  <typo3(arobas)sjbr.ca>

	* Resolves #86706: Avoid reference to PHP constant TAB
	* Resolves #86707: Use @TYPO3\CMS\Extbase\Annotation\ORM\Lazy annotation

2018-10-18  Stanislas Rolland  <typo3(arobas)sjbr.ca>
