@@ -3,6 +3,7 @@
 	* Resolves #91250: Add php configuration file for Extbase persistence mapping
 	* Resolves #90274: Add support for PHP 7.4
 	* Resolves #91251: Add Symfony dependency injection configuration
+	* Resolves #91567: Add php configuration file for Extbase persistence mapping to generated language pack
 
 2020-01-05  Stanislas Rolland  <typo3(arobas)sjbr.ca>
 
